--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=SIMULENEM-backend
+spring.datasource.url=jdbc:h2:mem:simulenem
+spring.datasource.username=sa
+spring.datasource.password=password
