--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=SIMULENEM-backend
+spring.docker.compose.enabled=false
 spring.datasource.url=jdbc:h2:mem:simulenem
 spring.datasource.username=sa
 spring.datasource.password=password
